# tizenfx-stub

./: .gitignore  CMakeLists.txt  README.md  dlog.pc.in  installFXRes.py  installFluxResources.py  project.config
include/: asprintf.h  tizen_error.h  unistd_win.h
src/: app-common.c  app-common.cpp  app-manager.c  app-manager.cpp  app_context.h  app_info.h  app_manager.h  app_manager_extension.h  app_manager_internal.h  asprintf.c  asprintf.h  config.h.in  dlog.c  dlog.cpp  dlog.h  dummy-base-util.c  dummy-feedback.c  dummy-iniparser.c  dummy-system-info.c  dummy-system-system-settings.c  dummy-theme-manager.c  dummy-ttrace.c  package-manager.h  preference.c  system_info.c  theme-common.h  tizen.h  tizen_error.h  tizenfx_stub_api.h  unix_types.h
